# pointproofs-paramgen

./: Cargo.toml  consistencycheck.tex  readme.md  security.tex  spec.md  usage.md
src/: hash_to_field_pointproofs.rs  hash_to_field_veccom.rs  lib.rs  main.rs  schnorr.rs  test.rs
