[package]
name = "veccom-paramgen"
version = "0.1.0"
authors = ["Adam <adam@algorand.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing-plus = { git = "https://github.com/algorand/pairing-plus", branch = "master" }
#pairing-plus = "0.17.1"
#ff = "0.4"
ff-zeroize = {git = "https://github.com/algorand/ff-zeroize"}
rand = "0.7"
atoi = "0.3.2"
zeroize = "1.1.0"
