[package]
name = "pointproofs-paramgen"
version = "0.1.0"
authors = ["Adam <adam@algorand.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


pairing-plus = { git = "https://github.com/algorand/pairing-plus", branch = "master" }
#ff = { version = "0.6.3", git = "https://github.com/algorand/ff-zeroize", features = ["derive"]}
ff-zeroize = { version = "0.6.3", features = ["derive"]}
# pairing-plus = "0.18"
sha2 = "0.8.0"
rand = "0.7"
atoi = "0.3.2"
zeroize = "1.1.0"
bigint = { version = "4", default-features = false }
